--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,6 @@ name = "rust-lpalmieri"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+actix-web = "=4.0.0-beta.8"
+actix-http = "=3.0.0-beta.8"
