--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,18 @@ name = "zero2prod"
 version = "0.1.0"
 edition = "2018"
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
+
 [dependencies]
 actix-web = "=4.0.0-beta.9"
 actix-http = "=3.0.0-beta.10"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+
+[dev-dependencies]
+actix-rt = "2"
